add computed unfulfilled quantity property to order line items
