# server/schemas/swagger.json
@@ -2,11 +2,11 @@
     "swagger": "2.0",
     "info": {
         "title": "Karrio API",
-        "description": "\n## API Reference\n\nKarrio is an open source multi-carrier shipping API that simplifies the integration of logistic carrier services.\n\nThe Karrio API is organized around REST. Our API has predictable resource-oriented URLs, accepts JSON-encoded\nrequest bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.\n\nThe Karrio API differs for every account as we release new versions.\nThese docs are customized to your version of the API.\n\n\n## Versioning\n\nWhen backwards-incompatible changes are made to the API, a new, dated version is released.\nThe current version is `2022.4`.\n\nRead our API changelog and to learn more about backwards compatibility.\n\nAs a precaution, use API versioning to check a new API version before committing to an upgrade.\n\n\n## Pagination\n\nAll top-level API resources have support for bulk fetches via \"list\" API methods. For instance, you can list addresses,\nlist shipments, and list trackers. These list API methods share a common structure, taking at least these\ntwo parameters: limit, and offset.\n\nKarrio utilizes offset-based pagination via the offset and limit parameters.\nBoth parameters take a number as value (see below) and return objects in reverse chronological order.\nThe offset parameter returns objects listed after an index.\nThe limit parameter take a limit on the number of objects to be returned from 1 to 100.\n\n\n```json\n{\n    \"next\": \"/v1/shipments?limit=25&offset=25\",\n    \"previous\": \"/v1/shipments?limit=25&offset=25\",\n    \"results\": [\n    ]\n}\n```\n\n## Environments\n\nThe Karrio API offer the possibility to create and retrieve certain objects in `test_mode`.\nIn development, it is therefore possible to add carrier connections, get live rates,\nbuy labels, create trackers and schedule pickups in `test_mode`.\n\n",
+        "description": "\n## API Reference\n\nKarrio is an open source multi-carrier shipping API that simplifies the integration of logistic carrier services.\n\nThe Karrio API is organized around REST. Our API has predictable resource-oriented URLs, accepts JSON-encoded\nrequest bodies, returns JSON-encoded responses, and uses standard HTTP response codes, authentication, and verbs.\n\nThe Karrio API differs for every account as we release new versions.\nThese docs are customized to your version of the API.\n\n\n## Versioning\n\nWhen backwards-incompatible changes are made to the API, a new, dated version is released.\nThe current version is `2022.3`.\n\nRead our API changelog and to learn more about backwards compatibility.\n\nAs a precaution, use API versioning to check a new API version before committing to an upgrade.\n\n\n## Pagination\n\nAll top-level API resources have support for bulk fetches via \"list\" API methods. For instance, you can list addresses,\nlist shipments, and list trackers. These list API methods share a common structure, taking at least these\ntwo parameters: limit, and offset.\n\nKarrio utilizes offset-based pagination via the offset and limit parameters.\nBoth parameters take a number as value (see below) and return objects in reverse chronological order.\nThe offset parameter returns objects listed after an index.\nThe limit parameter take a limit on the number of objects to be returned from 1 to 100.\n\n\n```json\n{\n    \"next\": \"/v1/shipments?limit=25&offset=25\",\n    \"previous\": \"/v1/shipments?limit=25&offset=25\",\n    \"results\": [\n    ]\n}\n```\n\n## Environments\n\nThe Karrio API offer the possibility to create and retrieve certain objects in `test_mode`.\nIn development, it is therefore possible to add carrier connections, get live rates,\nbuy labels, create trackers and schedule pickups in `test_mode`.\n\n",
         "contact": {
             "email": ""
         },
-        "version": "2022.4"
+        "version": "2022.3"
     },
     "host": "app.karrio.io",
     "schemes": [
@@ -4232,6 +4232,102 @@
                 }
             }
         },
+        "LineItem": {
+            "description": "The order line items.",
+            "required": [
+                "weight",
+                "weight_unit"
+            ],
+            "type": "object",
+            "properties": {
+                "id": {
+                    "title": "Id",
+                    "description": "A unique identifier",
+                    "type": "string",
+                    "minLength": 1
+                },
+                "weight": {
+                    "title": "Weight",
+                    "description": "The commodity's weight",
+                    "type": "number"
+                },
+                "weight_unit": {
+                    "title": "Weight unit",
+                    "description": "The commodity's weight unit",
+                    "type": "string",
+                    "enum": [
+                        "KG",
+                        "LB"
+                    ]
+                },
+                "description": {
+                    "title": "Description",
+                    "description": "A description of the commodity",
+                    "type": "string",
+                    "maxLength": 250,
+                    "x-nullable": true
+                },
+                "quantity": {
+                    "title": "Quantity",
+                    "description": "The commodity's quantity (number or item)",
+                    "type": "integer",
+                    "default": 1
+                },
+                "sku": {
+                    "title": "Sku",
+                    "description": "The commodity's sku number",
+                    "type": "string",
+                    "maxLength": 100,
+                    "x-nullable": true
+                },
+                "value_amount": {
+                    "title": "Value amount",
+                    "description": "The monetary value of the commodity",
+                    "type": "number",
+                    "x-nullable": true
+                },
+                "value_currency": {
+                    "title": "Value currency",
+                    "description": "The currency of the commodity value amount",
+                    "type": "string",
+                    "maxLength": 3,
+                    "x-nullable": true
+                },
+                "origin_country": {
+                    "title": "Origin country",
+                    "description": "The origin or manufacture country",
+                    "type": "string",
+                    "maxLength": 3,
+                    "x-nullable": true
+                },
+                "parent_id": {
+                    "title": "Parent id",
+                    "description": "The id of the related order line item.",
+                    "type": "string",
+                    "minLength": 1,
+                    "x-nullable": true
+                },
+                "metadata": {
+                    "title": "Metadata",
+                    "description": "\n<details>\n<summary>Commodity user references metadata.</summary>\n\n```\n{\n    \"part_number\": \"5218487281\",\n    \"reference1\": \"# ref 1\",\n    \"reference2\": \"# ref 2\",\n    \"reference3\": \"# ref 3\",\n    \"reference4\": \"# ref 4\",\n    ...\n}\n```\n</details>\n",
+                    "type": "object",
+                    "additionalProperties": true,
+                    "x-nullable": true
+                },
+                "object_type": {
+                    "title": "Object type",
+                    "description": "Specifies the object type",
+                    "type": "string",
+                    "default": "commodity",
+                    "minLength": 1
+                },
+                "unfulfilled_quantity": {
+                    "title": "Unfulfilled quantity",
+                    "type": "integer",
+                    "default": 0
+                }
+            }
+        },
         "Parcel": {
             "description": "The shipment's parcels",
             "required": [
@@ -4921,7 +5017,7 @@
                     "description": "The order line items.",
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/Commodity"
+                        "$ref": "#/definitions/LineItem"
                     }
                 },
                 "options": {
